add back buttons for edit scenes, create new list view for cards

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditSetActivity"
-            android:label="@string/add_set"/>
-
-        <activity android:name=".EditCardActivity"
-            android:label="@string/add_card">
-
+        <activity
+            android:name=".EditSetActivity"
+            android:label="@string/add_set"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
+        <activity
+            android:name=".EditCardActivity"
+            android:label="@string/add_card" />
+        <activity
+            android:name=".TermActivity"
+            android:label=" "
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".DefinitionActivity" />
+        <activity
+            android:name=".CardListActivity"
+            android:label="@string/title_activity_card_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
