add up and flip menu options for definitions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CardListActivity" />
         </activity>
-        <activity android:name=".DefinitionActivity" />
+        <activity android:name=".DefinitionActivity"
+            android:label=" "
+            android:parentActivityName=".CardListActivity"
+
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CardListActivity" />
+
+        </activity>
         <activity
             android:name=".CardListActivity"
             android:label="Set Name"
